# matrix-os

./: .gitignore  README.md  pyproject.toml
src/matrix_os/: __init__.py  __main__.py  clock.py  earth.py  imageviewer.py  main.py  settings.py  slack.py  stocks.py  weather.py  welcome.py
src/matrix_os/apps/: __init__.py  base.py  clock.py  dvd.py  earth.py  fonts.py  imageviewer.py  slack.py  stocks.py  weather.py  welcome.py
src/matrix_os/apps/clock/: __init__.py  app.py
src/matrix_os/apps/dvd/: __init__.py  app.py
src/matrix_os/apps/earth/: __init__.py  app.py
src/matrix_os/apps/imageviewer/: __init__.py  app.py
src/matrix_os/apps/slack/: __init__.py  app.py
src/matrix_os/apps/stocks/: __init__.py  app.py  db.py
src/matrix_os/apps/weather/: __init__.py  app.py
src/matrix_os/apps/welcome/: __init__.py  app.py
src/matrix_os/core/: __init__.py  config.py  display.py  ipc.py  kernel.py  sandbox.py  scheduler.py
src/matrix_os/web/: __init__.py  app.py
src/matrix_os/web/static/css/: base.css  display.css  logs.css
src/matrix_os/web/templates/: base.html  index.html  logs.html
tests/: __init__.py  conftest.py  test_lint.py
