[project]
name = "matrix-os"
version = "1.0.0"
description = "A modular LED matrix display system with sandboxed apps"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "pytz>=2024.1",
    "numpy>=1.24.0",
    "twelvedata>=1.2.0",
    "rgbmatrix==0.0.1; sys_platform == 'linux'",
    "pillow>=11.3.0",
    "pydantic-settings>=2.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sse-starlette>=2.1.0",
    "jinja2>=3.1.0"
]

    [project.scripts]
    matrix-os = "matrix_os.main:main"

    [project.optional-dependencies]
    dev = [
        "pytest>=7.0.0",
        "pytest-cov>=4.0.0",
        "black>=25.11.0",
        "ruff>=0.14.7"
    ]

[build-system]
requires = [ "uv_build>=0.5.15" ]
build-backend = "uv_build"

[tool.uv]
find-links = [ "./vendor" ]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.black]
line-length = 100
target-version = [ "py39" ]